argo-rollouts-demo-fe/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-rollouts-demo-fe
  namespace: argo-rollouts-demo
  labels:
    app: argo-rollouts-demo-fe
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: argo-rollouts-demo-fe
  template:
    metadata:
      labels:
        app: argo-rollouts-demo-fe
    spec:
      containers:
        - name: argo-rollouts-demo-fe
          image: prodacr1234.azurecr.io/argo-rollouts-demo-fe:main-540ea23
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "5m"
              memory: "8Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 2
