argo-rollouts-demo-fe/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-demo-fe-service
  namespace: argo-rollouts-demo
spec:
  selector:
    app: argo-rollouts-demo-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
